# cmake-git-versioning-example

./: CMakeLists.txt  GenerateVersionHeader.cmake  README.md  foobar_version.h.in  main.c
